Fixed overflow bug (remove padding on header and footer)

--- a/src/style.css
+++ b/src/style.css
@@ -22,8 +22,6 @@ body {
 header {
     font-size: 2rem;
     flex-shrink: 0;
-    margin: 0;
-    padding: 1rem;
     display: flex;
     gap: 1rem;
     align-items: center;
@@ -40,8 +38,6 @@ main {
 footer {
     font-size: 2rem;
     flex-shrink: 0;
-    margin: 0;
-    padding: 1rem;
     display: flex;
     gap: 1rem;
     align-items: center;
